doc(Combobox): List Autocomplete with Automatic Selection fix(Combobox): apply a higher z-index to avoid layer collision

--- a/src/components/combobox/combobox.css
+++ b/src/components/combobox/combobox.css
@@ -17,13 +17,14 @@
   border-radius: 4px;
   box-shadow: 0 0 0 0 rgba(97, 181, 255, 0);
   box-sizing: border-box;
-  list-style-type:none;
+  list-style-type: none;
   margin: 0;
   padding: 0;
   transition-duration: 250ms;
   transition-property: box-shadow;
   width: 100%;
   position: absolute;
+  z-index: 1;
 }
 
 .listbox > [role="option"] {
